- Got rid of flattened_concept_hierarchy and all the code used to create   it (just commented out, but ready to delete probably); hierarchy has   totally replaced it -- EXCEPT a couple numbers in the subtitle for the   CsetDataTable.  TODO: fix those. - Experimenting with denser display -- planning to make a toggle for   very dense display that looks more like a heatmap. - Highlighting checked cells in green as part of that. - Moved some data updating code from ComparisonDataTable to Csets --   helps it all work more smoothly. - Hiding collapse/expand icons for non-nested display - Fixed the misnumbering of non-nested display

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
   pointer-events: none;
   border-radius: 6px;
   padding: 4px 6px;
-  font-size: 14px;
+  font-size: 24px;
   width: 150px;
 }
 
@@ -15,6 +15,15 @@
   padding: 0px;
   margin: 0px;
   line-height: 10px;
+}
+.comparison-data-table .rdt_TableRow,
+.comparison-data-table .rdt_TableCell {
+  /*
+    height: 3px;
+    max-height: 3px;
+  font-size: 2px;
+   */
+  min-height: 0px;
 }
 .comparison-data-table .rdt_TableHeadRow > div + div
 {
